# slip-mqtt-gateway

./: .gitlab-ci.yml  CMakeLists.txt  README.md  library.h
cmake/: BinaryCodecConfig.cmake.in  gtest_download.cmake
include/BinaryCodec/: BinaryCodec.h  BinaryCodecHeader.h
packet-format/: example_packet_handler.h  generate_codecs.py  generate_headers.py  packet.yaml  packet_decoder.c  packet_decoder.c.mako  packet_decoder.h  packet_decoder_hand_coded.c  packet_header.h  packet_header.h.mako
packet-format/templates/c/core/: BinaryCodec.c.mako  serial_hal.c  serial_hal.h  slip.c  slip.h
src/: library.c  library.h  packet.yaml  serial_hal_private.h  slip.c  slip.h
src/arduino/BinaryCodec/raw/BinaryCodec/: LICENSE
src/arduino/BinaryCodec/raw/BinaryCodec/examples/Basic/: Basic.ino
src/arduino/BinaryCodec/templates/BinaryCodec/: README.md.in  library.properties.in
tests/: fake_serial.c  fake_serial.h  test_basic.cpp  test_slip.cpp
